--- a/product-catalog/package.json
+++ b/product-catalog/package.json
@@ -8,6 +8,7 @@
     "@ant-design/icons": "^5.4.0",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.19.3",
+    "dotenv": "^16.4.5",
     "firebase": "10.12.4",
     "lottie-react": "^2.4.0",
     "react": "^18.0.0",
